[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task_lock"
version = "0.0.2"
authors = [
  { name="Shrijeeth S", email="shrijeethsuresh@gmail.com" },
]
description = "Python library designed for efficient distributed locking in asynchronous and synchronous systems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis==5.2.0",
    "aioredis==2.0.1"
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "pylint==3.2.7",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0"
]

[tool.setuptools.packages.find]
include = ["task_lock"]

[project.urls]
"Homepage" = "https://github.com/rahulshettyv/TaskLock"
"Bug Tracker" = "https://github.com/rahulshettyv/TaskLock/issues"